--- a/index.html
+++ b/index.html
@@ -1,369 +1,121 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção de OP</title>
+    <title>Cálculo de Quantidade Cortada</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            padding: 0;
         }
-        h1 {
+
+        h2 {
             color: #333;
         }
-        .input-group {
-            margin-bottom: 10px;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
+
         label {
-            display: block;
+            font-weight: bold;
             margin-bottom: 5px;
         }
-        input[type="number"],
-        input[type="text"],
-        select {
+
+        input[type="number"] {
+            padding: 5px;
+            font-size: 14px;
             width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
             box-sizing: border-box;
         }
-        button {
-            padding: 10px 20px;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-right: 5px;
+
+        .result {
             margin-top: 10px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
         }
-        .machine-btn {
-            width: 150px;
-            height: 50px;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        .machine-buttons {
+
+        .buttons {
             display: flex;
             gap: 10px;
-            margin-bottom: 20px;
         }
-        .active {
-            background-color: red;
+
+        button {
+            padding: 10px 20px;
+            font-size: 14px;
+            border: none;
+            cursor: pointer;
+            background-color: #28a745;
+            color: white;
         }
-        .inactive {
-            background-color: green;
+
+        button#salvar {
+            background-color: #007bff;
         }
-        .calc-btn {
-            background-color: #4CAF50;
+
+        button:hover {
+            opacity: 0.9;
         }
-        .calc-btn:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
-        table {
-            margin-top: 20px;
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        h2 {
-            margin-top: 30px;
+
+        button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
         }
     </style>
 </head>
 <body>
-    <h1>Controle de Produção</h1>
+    <h2>Calculadora de Quantidade Cortada</h2>
+    <form id="calculo-form">
+        <label for="quantidadeOp">Quantidade da OP:</label>
+        <input type="number" id="quantidadeOp" placeholder="Insira a quantidade da OP" required>
 
-    <div class="machine-buttons">
-        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
-        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
-        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
-        <!-- Adicione mais botões de máquina se necessário -->
-    </div>
+        <label for="quantidadeCortada">Quantidade Cortada por Máquina:</label>
+        <input type="number" id="quantidadeCortada" placeholder="Insira a quantidade cortada por máquina" required>
 
-    <form id="productionForm">
-        <div class="input-group">
-            <label for="opNumber">Número da OP:</label>
-            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
+        <label for="numMaquinas">Número de Máquinas:</label>
+        <input type="number" id="numMaquinas" placeholder="Insira o número de máquinas" required>
+
+        <div class="buttons">
+            <button type="button" id="calcular">Calcular</button>
+            <button type="button" id="salvar">Salvar</button>
         </div>
-        <div class="input-group">
-            <label for="componentCode">Código do Componente:</label>
-            <input type="text" id="componentCode" required>
+        
+        <div class="result">
+            <p><strong>Quantidade Total Cortada:</strong> <span id="quantidadeTotalCortada">-</span></p>
+            <p><strong>Número de Ciclos:</strong> <span id="numCiclos">-</span></p>
         </div>
-        <div class="input-group">
-            <label for="opQuantity">Quantidade da OP:</label>
-            <input type="number" id="opQuantity" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="opLength">Comprimento da OP (cm):</label>
-            <input type="number" id="opLength" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="fabricType">Tipo de Tecido:</label>
-            <select id="fabricType" required>
-                <option value="">Selecione</option>
-                <option value="Plano">Plano</option>
-                <option value="Tubular">Tubular</option>
-                <option value="PECH">PECH</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="opWeight">Gramatura da OP:</label>
-            <input type="number" id="opWeight" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-            <input type="number" id="piecesRemoved" min="0" required>
-        </div>
-        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
-    <h2>Resultados:</h2>
-    <p id="cutsResult">Número de Cortes: </p>
-    <p id="turnsResult">Número de Voltas: </p>
-    <p id="cutAmountResult">Quantidade Cortada: </p>
-    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-    <p id="cyclesResult">Número de Ciclos: </p>
-
-    <table id="recordsTable">
-        <thead>
-            <tr>
-                <th>Data e Hora</th>
-                <th>Máquinas Ativas</th>
-                <th>Número da OP</th>
-                <th>Código do Componente</th>
-                <th>Quantidade da OP</th>
-                <th>Comprimento da OP</th>
-                <th>Tipo de Tecido</th>
-                <th>Gramatura da OP</th>
-                <th>Quantidade de Peças Retiradas</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <button onclick="downloadCSV()">Download CSV</button>
-
     <script>
-        let records = [];
+        document.getElementById('calcular').addEventListener('click', function() {
+            const quantidadeOp = parseFloat(document.getElementById('quantidadeOp').value);
+            const quantidadeCortada = parseFloat(document.getElementById('quantidadeCortada').value);
+            const numMaquinas = parseInt(document.getElementById('numMaquinas').value);
 
-        function toggleMachine(machineNumber) {
-            const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
-            }
-        }
-
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
-        }
-
-        function calculateAndSave() {
-            const opNumber = document.getElementById('opNumber').value;
-            const componentCode = document.getElementById('componentCode').value;
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-            const opLength = parseFloat(document.getElementById('opLength').value);
-            const fabricType = document.getElementById('fabricType').value;
-            const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
-
-            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-                alert('Por favor, preencha todos os campos corretamente.');
+            if (isNaN(quantidadeOp) || isNaN(quantidadeCortada) || isNaN(numMaquinas)) {
+                alert('Por favor, insira valores válidos.');
                 return;
             }
 
-            const maxCarouselLength = 540;
+            // Calcular Quantidade Total Cortada
+            const quantidadeTotalCortada = quantidadeCortada * numMaquinas;
 
-            // Cálculo do Número de Cortes
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+            // Calcular Número de Ciclos
+            const numCiclos = quantidadeOp / quantidadeCortada;
 
-            // Cálculo do Número de Voltas
-            let numTurns = 0;
-
-            if (fabricType === 'Plano') {
-                numTurns = calculateTurnsPlano(opWeight);
-            } else if (fabricType === 'Tubular') {
-                numTurns = calculateTurnsTubular(opWeight);
-            } else if (fabricType === 'PET') {
-                numTurns = 25; // Valor fixo para PET
-            }
-
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
-
-            // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * numTurns;
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
-
-            // Cálculo da Quantidade Total Cortada
-            const activeMachines = getActiveMachinesCount();
-            const totalCutAmount = cutAmount * activeMachines;
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
-
-            // Cálculo do Número de Ciclos
-            const numCycles = opQuantity / cutAmount;
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
-
-            const date = new Date().toLocaleString("pt-BR", { timeZone: "America/Sao_Paulo" }).replace(",", " ");
-            const activeMachinesList = getActiveMachinesList();
-
-            records.push({
-                date,
-                activeMachines: activeMachinesList.join(', '),
-                opNumber,
-                componentCode,
-                opQuantity,
-                opLength,
-                fabricType,
-                opWeight,
-                piecesRemoved
-            });
-
-            saveRecords();
-            updateTable();
-
-            // Limpar os campos do formulário
-            document.getElementById('productionForm').reset();
-            document.getElementById('opWeight').disabled = false;
-            document.getElementById('cutsResult').textContent = 'Número de Cortes: ';
-            document.getElementById('turnsResult').textContent = 'Número de Voltas: ';
-            document.getElementById('cutAmountResult').textContent = 'Quantidade Cortada: ';
-            document.getElementById('totalCutAmountResult').textContent = 'Quantidade Total Cortada: ';
-            document.getElementById('cyclesResult').textContent = 'Número de Ciclos: ';
-        }
-
-        function calculateTurnsPlano(weight) {
-            const baseWeight = 65;
-            const baseTurns = 80;
-            if (weight === baseWeight) {
-                return baseTurns;
-            } else {
-                const difference = (weight - baseWeight) * 8 / (92 - 80);
-                return baseTurns - difference;
-            }
-        }
-
-        function calculateTurnsTubular(weight) {
-            const baseWeight = 65;
-            const baseTurns = 45;
-            if (weight === baseWeight) {
-                return baseTurns;
-            } else {
-                const difference = (weight - baseWeight) * 8 / (92 - 80);
-                return baseTurns - difference;
-            }
-        }
-
-        function getActiveMachinesList() {
-            const machines = [];
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    machines.push(button.textContent);
-                }
-            }
-            return machines;
-        }
-
-        function updateTable() {
-            const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
-            tableBody.innerHTML = "";
-
-            records.forEach(record => {
-                const row = tableBody.insertRow();
-                row.insertCell(0).textContent = record.date;
-                row.insertCell(1).textContent = record.activeMachines;
-                row.insertCell(2).textContent = record.opNumber;
-                row.insertCell(3).textContent = record.componentCode;
-                row.insertCell(4).textContent = record.opQuantity;
-                row.insertCell(5).textContent = record.opLength;
-                row.insertCell(6).textContent = record.fabricType;
-                row.insertCell(7).textContent = record.opWeight;
-                row.insertCell(8).textContent = record.piecesRemoved;
-            });
-        }
-
-        function saveRecords() {
-            localStorage.setItem('productionRecords', JSON.stringify(records));
-        }
-
-        function loadRecords() {
-            const savedRecords = localStorage.getItem('productionRecords');
-            if (savedRecords) {
-                records = JSON.parse(savedRecords);
-                updateTable();
-            }
-        }
-
-        function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
-
-            records.forEach(record => {
-                csvContent += `${record.date},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
-            });
-
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "production_records.csv");
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
-
-        function init() {
-            loadRecords();
-        }
-
-        document.getElementById('fabricType').addEventListener('change', function() {
-            const selectedFabric = this.value;
-            const opWeight = document.getElementById('opWeight');
-            if (selectedFabric === 'Plano') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 120;
-                opWeight.value = ''; // Limpar o valor anterior
-            } else if (selectedFabric === 'Tubular') {
-                opWeight.disabled = false;
-                opWeight.min = 65;
-                opWeight.max = 82;
-                opWeight.value = ''; // Limpar o valor anterior
-            } else if (selectedFabric === 'PET') {
-                opWeight.value = 170;
-                opWeight.disabled = true;
-            }
+            // Exibir resultados
+            document.getElementById('quantidadeTotalCortada').textContent = quantidadeTotalCortada;
+            document.getElementById('numCiclos').textContent = numCiclos.toFixed(2);
         });
 
-        window.onload = init;
+        document.getElementById('salvar').addEventListener('click', function() {
+            alert('Dados salvos com sucesso!');
+        });
     </script>
 </body>
 </html>
