--- a/index.html
+++ b/index.html
@@ -1,121 +1,291 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo de Quantidade Cortada</title>
+    <title>Controle de Produção de OP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            padding: 0;
         }
-
-        h2 {
+        h1 {
             color: #333;
         }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+        .input-group {
+            margin-bottom: 10px;
         }
-
         label {
-            font-weight: bold;
+            display: block;
             margin-bottom: 5px;
         }
-
-        input[type="number"] {
-            padding: 5px;
-            font-size: 14px;
+        input[type="number"],
+        input[type="text"],
+        select {
             width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
             box-sizing: border-box;
         }
-
-        .result {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-        }
-
-        .buttons {
-            display: flex;
-            gap: 10px;
-        }
-
         button {
             padding: 10px 20px;
-            font-size: 14px;
+            color: white;
             border: none;
             cursor: pointer;
-            background-color: #28a745;
-            color: white;
+            margin-right: 5px;
+            margin-top: 10px;
         }
-
-        button#salvar {
-            background-color: #007bff;
+        .machine-btn {
+            width: 150px;
+            height: 50px;
+            margin-bottom: 10px;
+            font-size: 16px;
         }
-
-        button:hover {
-            opacity: 0.9;
+        .machine-buttons {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
         }
-
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
+        .active {
+            background-color: red;
+        }
+        .inactive {
+            background-color: green;
+        }
+        .calc-btn {
+            background-color: #4CAF50;
+        }
+        .calc-btn:hover {
+            background-color: #45a049;
+        }
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+        table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        h2 {
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
-    <h2>Calculadora de Quantidade Cortada</h2>
-    <form id="calculo-form">
-        <label for="quantidadeOp">Quantidade da OP:</label>
-        <input type="number" id="quantidadeOp" placeholder="Insira a quantidade da OP" required>
+    <h1>Controle de Produção</h1>
 
-        <label for="quantidadeCortada">Quantidade Cortada por Máquina:</label>
-        <input type="number" id="quantidadeCortada" placeholder="Insira a quantidade cortada por máquina" required>
+    <div class="machine-buttons">
+        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
+        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
+        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
+    </div>
 
-        <label for="numMaquinas">Número de Máquinas:</label>
-        <input type="number" id="numMaquinas" placeholder="Insira o número de máquinas" required>
-
-        <div class="buttons">
-            <button type="button" id="calcular">Calcular</button>
-            <button type="button" id="salvar">Salvar</button>
+    <form id="productionForm">
+        <div class="input-group">
+            <label for="opNumber">Número da OP:</label>
+            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
         </div>
-        
-        <div class="result">
-            <p><strong>Quantidade Total Cortada:</strong> <span id="quantidadeTotalCortada">-</span></p>
-            <p><strong>Número de Ciclos:</strong> <span id="numCiclos">-</span></p>
+        <div class="input-group">
+            <label for="componentCode">Código do Componente:</label>
+            <input type="text" id="componentCode" required>
         </div>
+        <div class="input-group">
+            <label for="opQuantity">Quantidade da OP:</label>
+            <input type="number" id="opQuantity" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="opLength">Comprimento da OP (cm):</label>
+            <input type="number" id="opLength" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="fabricType">Tipo de Tecido:</label>
+            <select id="fabricType" required>
+                <option value="">Selecione</option>
+                <option value="Plano">Plano</option>
+                <option value="Tubular">Tubular</option>
+                <option value="PET">PET</option>
+            </select>
+        </div>
+        <div class="input-group">
+            <label for="opWeight">Gramatura da OP:</label>
+            <input type="number" id="opWeight" min="0" required>
+        </div>
+        <div class="input-group">
+            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+            <input type="number" id="piecesRemoved" min="0" required>
+        </div>
+        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
-    <script>
-        document.getElementById('calcular').addEventListener('click', function() {
-            const quantidadeOp = parseFloat(document.getElementById('quantidadeOp').value);
-            const quantidadeCortada = parseFloat(document.getElementById('quantidadeCortada').value);
-            const numMaquinas = parseInt(document.getElementById('numMaquinas').value);
+    <h2>Resultados:</h2>
+    <p id="cutsResult">Número de Cortes: </p>
+    <p id="turnsResult">Número de Voltas: </p>
+    <p id="cutAmountResult">Quantidade Cortada: </p>
+    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
+    <p id="cyclesResult">Número de Ciclos: </p>
 
-            if (isNaN(quantidadeOp) || isNaN(quantidadeCortada) || isNaN(numMaquinas)) {
-                alert('Por favor, insira valores válidos.');
+    <table id="recordsTable">
+        <thead>
+            <tr>
+                <th>Data e Hora</th>
+                <th>Máquinas Ativas</th>
+                <th>Número da OP</th>
+                <th>Código do Componente</th>
+                <th>Quantidade da OP</th>
+                <th>Comprimento da OP</th>
+                <th>Tipo de Tecido</th>
+                <th>Gramatura da OP</th>
+                <th>Quantidade de Peças Retiradas</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <button onclick="downloadCSV()">Download CSV</button>
+
+    <script>
+        let records = [];
+
+        function toggleMachine(machineNumber) {
+            const button = document.getElementById(`machine${machineNumber}`);
+            if (button.classList.contains('inactive')) {
+                button.classList.remove('inactive');
+                button.classList.add('active');
+            } else {
+                button.classList.remove('active');
+                button.classList.add('inactive');
+            }
+        }
+
+        function getActiveMachinesCount() {
+            let count = 0;
+            const machineButtons = document.getElementsByClassName('machine-btn');
+            for (let button of machineButtons) {
+                if (button.classList.contains('active')) {
+                    count++;
+                }
+            }
+            return count;
+        }
+
+        function formatOPNumber(input) {
+            let value = input.value.replace(/\D/g, '');
+            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+            input.value = value;
+        }
+
+        function calculateAndSave() {
+            const opNumber = document.getElementById('opNumber').value;
+            const componentCode = document.getElementById('componentCode').value;
+            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+            const opLength = parseFloat(document.getElementById('opLength').value);
+            const fabricType = document.getElementById('fabricType').value;
+            const opWeight = parseFloat(document.getElementById('opWeight').value);
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
+                alert('Por favor, preencha todos os campos corretamente.');
                 return;
             }
 
-            // Calcular Quantidade Total Cortada
-            const quantidadeTotalCortada = quantidadeCortada * numMaquinas;
+            const maxCarouselLength = 540;
 
-            // Calcular Número de Ciclos
-            const numCiclos = quantidadeOp / quantidadeCortada;
+            // Cálculo do Número de Cortes
+            const numCuts = Math.floor(maxCarouselLength / opLength);
+            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
 
-            // Exibir resultados
-            document.getElementById('quantidadeTotalCortada').textContent = quantidadeTotalCortada;
-            document.getElementById('numCiclos').textContent = numCiclos.toFixed(2);
-        });
+            // Cálculo do Número de Voltas
+            let numTurns = 0;
 
-        document.getElementById('salvar').addEventListener('click', function() {
-            alert('Dados salvos com sucesso!');
-        });
+            if (fabricType === 'Plano') {
+                numTurns = calculateTurnsPlano(opWeight);
+            } else if (fabricType === 'Tubular') {
+                numTurns = calculateTurnsTubular(opWeight);
+            } else if (fabricType === 'PET') {
+                numTurns = 25; // Valor fixo para PET
+            }
+
+            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+
+            // Cálculo da Quantidade Cortada
+            const cutAmount = numCuts * numTurns;
+            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+
+            // Cálculo da Quantidade Total Cortada
+            const activeMachines = getActiveMachinesCount();
+            const totalCutAmount = cutAmount * activeMachines;
+            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+
+            // Cálculo do Número de Ciclos
+            const numCycles = opQuantity / cutAmount;
+            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+
+            const record = {
+                timestamp: new Date().toLocaleString(),
+                activeMachines,
+                opNumber,
+                componentCode,
+                opQuantity,
+                opLength,
+                fabricType,
+                opWeight,
+                piecesRemoved
+            };
+
+            records.push(record);
+            updateRecordsTable();
+        }
+
+        function calculateTurnsPlano(weight) {
+            return Math.floor(7000 / weight);
+        }
+
+        function calculateTurnsTubular(weight) {
+            return Math.floor(6800 / weight);
+        }
+
+        function updateRecordsTable() {
+            const tableBody = document.querySelector('#recordsTable tbody');
+            tableBody.innerHTML = '';
+
+            records.forEach(record => {
+                const row = document.createElement('tr');
+                for (let key in record) {
+                    const cell = document.createElement('td');
+                    cell.textContent = record[key];
+                    row.appendChild(cell);
+                }
+                tableBody.appendChild(row);
+            });
+        }
+
+        function downloadCSV() {
+            let csvContent = "data:text/csv;charset=utf-8,";
+            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+
+            records.forEach(record => {
+                const row = Object.values(record).join(',');
+                csvContent += row + "\n";
+            });
+
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", "controle_producao.csv");
+            document.body.appendChild(link);
+            link.click();
+        }
     </script>
 </body>
 </html>
